I have created the endpoint for Most Popular QuizTags